-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0 Beta
-
Debian 8, uvesafb
-
a3f82a8995543288dd004349bbe94beece170d6a
With any widget based example under QtMultimedia, there is message coming from QPlatformWindow:
This plugin does not support setParent!
Also QML examples with Qt Quick 2D Renderer do not draw anything.
For Gerrit Dashboard: QTBUG-46169 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
112630,2 | GStreamer: don't use xvimagesink when Qt is not using Xcb. | 5.5 | qt/qtmultimedia | Status: MERGED | +2 | 0 |